--- a/views/admin-header.ejs
+++ b/views/admin-header.ejs
@@ -14,6 +14,8 @@
 	 crossorigin="anonymous">
 	<script src="//rawgit.com/honeymaro/MaroJS-list-renderer/master/src/list-renderer.js"></script>
 
+
+	<script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
 	<script>
 		var company_id = 1;
 	</script>
